--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
   },
   "homepage": "https://github.com/stevetrilogy/unit10hw#readme",
   "dependencies": {
+    "axios": "^0.19.1",
     "fs": "0.0.1-security",
     "inquirer": "^6.5.2",
-    "path": "^0.12.7",
-    "util": "^0.12.1"
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "jest": "^24.9.0"
